# centripeta

./: .gitignore  README.md  danny_example.py  manager.py  pyproject.toml  setup.py
Operation/: manager.py  pycont_config.json
centripeta/: __init__.py  centripeta.py  core_device.py  protocols.py  wheel_control.py
centripeta/archive/camera/: camera_setup.py
centripeta/archive/tricont/: pycont_config.json
centripeta/configs/: analyzer_config.json  dispense_config.json
centripeta/instruments/: base_instrument.py
centripeta/tools/: manager.py
centripeta/tricont/: triconts.py
centripeta/utils/: __init__.py  csv_utils.py  json_utils.py  logger.py  mail.py
firmware/analysis_1/: analysis_1.ino
firmware/analysis_2/: analysis_2.ino
firmware/dispensing/: dispensing.ino
protocols/: acetone_water.py  analysis_camera.py  analysis_pH.py  analysis_turbidity.py  analysis_wheel_test.py  filming.py  log.txt  platform_config.json  platform_config_ports.json  platform_config_simple.json  pump_run.py  pycont_config.json  pycont_config_less.json  sample_preparation.py  sample_preperation.py  test_camera.py  test_commandanduino.py  test_fans.py  test_wheel.py  two_wheel_test.py  visitor_show_case.py
protocols/conditions/: acetone_water_1.csv  xp_initial.csv  xp_initial_0.csv  xp_initial_1.csv  xp_initial_2.csv  xp_initial_3csv.csv  xp_initial_process.csv  xp_run_0.csv  xp_run_1.csv  xp_run_2.csv  xp_run_3.csv  xp_run_4.csv  xp_test.csv
tests/: camera_control.py  camera_setup.py  platform_config.json  test_camera.py  test_wheel.py
(+17 files in other folders)
