[tool.poetry]
name = "centripeta"
version = "0.1.0"
description = "A robot for chemistry!"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
commanduino = {git = "https://github.com/marcosfelt/commanduino"}
pycont = {git = "https://github.com/croningp/pycont"}
pandas = "^0.24.2"
pint = "^0.9.0"
sendgrid = "^5.6"
opencv-contrib-python = "^4.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupyterlab = "^0.35.4"
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
